--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --font-heading: "Sen", sans-serif;
+  --primary-color: #ffb900;
+}
 html {
   font-size: 62.5%;
 }
@@ -31,7 +35,9 @@ a {
   border-radius: 24.5px;
   background-color: #171100;
 }
-
+.btn:hover {
+  opacity: 0.9; /* làm mờ */
+}
 /*==================header===================*/
 .header {
   background: #fffcf4;
@@ -40,6 +46,8 @@ a {
   /* khi quận xuống thanh menu quận xuống theo */
   position: sticky;
   top: -28px;
+  /* chánh bị ảnh đè lên thanh quấn */
+  z-index: 1;
 }
 .header .body-header {
   display: flex;
@@ -92,4 +100,148 @@ a {
 }
 .header .action {
   margin-left: 49px;
+}
+/* ==================hero================= */
+.hero {
+  padding: 56px 0 65px;
+  background-color: #fffcf4;
+}
+.hero .body-hero {
+  display: flex;
+}
+/* ----------------hero left--------------- */
+.hero .media-block {
+  /*cách tính lấy chiều dài trên figma của media-block là 570px chia cho chiều dài mặc định của web 1170px  ra sấp sỉ 48%  */
+  width: 48%;
+  position: relative;
+}
+
+.hero .media-block .img {
+  width: 470px;
+  height: 685px;
+  /* đỡ bị vỡ ảnh */
+  object-fit: cover;
+  border-radius: 20px;
+}
+.hero .hero-summary {
+  padding: 24px;
+  width: 270px;
+  /* height: 244px; */
+  position: absolute;
+  bottom: 48px;
+  right: 0;
+  border-radius: 12px;
+  background-color: #ffffff;
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0.05);
+}
+.hero-summary .item {
+  align-items: center;
+  display: flex;
+}
+/* tác động đến class item sau một class item */
+.hero-summary .item + .item {
+  margin-top: 22px;
+}
+.hero-summary .icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff9e8;
+}
+.hero-summary .icon2 {
+  background: #fcefff;
+}
+.hero-summary .icon3 {
+  background: #ebeaff;
+}
+.hero-summary .info {
+  margin-left: 16px;
+}
+.hero-summary .label {
+  color: #5f5b53;
+  font-size: 1.4rem;
+  line-height: 1.86; /* 185.714% */
+}
+.hero-summary .title {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #171100;
+  line-height: 1.67; /*166.667% */
+}
+/* ----------------hero right-------------- */
+.hero .content-block {
+  width: 52%;
+  padding-left: 130px;
+  padding-top: 64px;
+}
+.hero .heading {
+  font-family: var(--font-heading);
+  color: #171100;
+  font-weight: 700;
+  font-size: 5.8rem;
+  line-height: 1.17; /* 117.241% */
+  letter-spacing: -1.16px;
+}
+.hero .desc {
+  margin-top: 22px;
+  font-size: 1.8rem;
+  line-height: 1.67; /* 166.667% */
+  color: #5f5b53;
+}
+.hero .cta-group {
+  align-items: center;
+  margin-top: 38px;
+  display: flex;
+}
+.hero .btn-see-courses {
+  width: 180px;
+  line-height: 64px;
+  border-radius: 32px;
+  background-color: var(--primary-color);
+}
+.hero .watch-video {
+  margin-left: 28px;
+  border: none;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.hero .watch-video .icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.07);
+}
+
+.hero .watch-video span {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #171100;
+  line-height: 1.67; /* 166.667% */
+  margin-left: 14px;
+}
+.hero .desc-recent {
+  margin-top: 48px;
+}
+.desc-stats {
+  margin-top: 8px;
+}
+.hero .desc-stats strong {
+  font-size: 44px;
+  color: #171100;
+  font-family: var(--font-heading);
+  font-weight: 700;
+  line-height: 54px;
+  margin-right: 15px;
+}
+.hero .desc-stats strong:nth-child(2) {
+  margin-left: 28px;
 }
