--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,14 @@ a {
 .btn:hover {
   opacity: 0.9; /* làm mờ */
 }
+.heading-h2 {
+  font-family: var(--font-heading);
+  color: #171100;
+  font-weight: 700;
+  font-size: 3.8rem;
+  line-height: 1.26; /* 126.316 */
+  letter-spacing: -2%;
+}
 /*==================header===================*/
 .header {
   background: #fffcf4;
@@ -208,7 +216,7 @@ a {
   background: transparent;
   display: flex;
   align-items: center;
-  cursor: pointer;
+  cursor: pointer; /* thêm hiệu ứng chỉ vào bàn tay */
 }
 .hero .watch-video .icon {
   width: 40px;
@@ -244,4 +252,42 @@ a {
 }
 .hero .desc-stats strong:nth-child(2) {
   margin-left: 28px;
+}
+/* =================popular================= */
+.popular {
+  padding: 65px 0;
+  margin-top: 135px;
+}
+.popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular-top .desc {
+  margin-top: 16px;
+  width: 458px;
+  font-size: 18px;
+  font-weight: 400px;
+  line-height: 1.67; /* 166.667 */
+  color: #5f5b53;
+}
+.popular-top .controls {
+  display: flex;
+  gap: 18px;
+}
+.popular-top .controls-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  width: 40px;
+  height: 40px;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 50%;
+}
+.popular-top .controls-btn:hover {
+  background-color: var(--primary-color);
+  color: #ffffff;
+  cursor: pointer;
 }
