--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,3 +384,81 @@ a {
 .popular .course-item .btn-book-now:hover {
   background-color: var(--primary-color);
 }
+/* =====================feedback================== */
+.feedback {
+  margin-top: 135px;
+  background-color: #2e2100;
+  height: 380px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.feedback .feedback-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* -------------left---------------- */
+}
+.feedback-item .avatar {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.feedback .feedback-item .info {
+  width: 159px;
+  height: 188px;
+}
+.feedback .info .member-name {
+  margin-top: 18px;
+  font-family: var(--font-heading);
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 1.42; /*141.667% */
+  color: #f7f7f7;
+}
+.feedback .info .desc {
+  margin-top: 4px;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714 (26px)*/
+  color: #bfbcb2;
+}
+/* .feedback .info .foot {
+  margin-top: 28px;
+} */
+.feedback-item .dots {
+  margin-top: 28px;
+  gap: 6px;
+  display: flex;
+  cursor: pointer;
+}
+.feedback-item .dot {
+  width: 6px;
+  height: 6px;
+  background: #634700;
+  border-radius: 50%;
+}
+.feedback-item .dot.active {
+  background: var(--primary-color);
+  /* tắt hiện bàn tay */
+  cursor: default;
+}
+/* ------------------right----------------- */
+.feedback .feedback-item .content {
+  /* cách tính % lấy khối content=770 này chia cho feedback=1170*/
+  width: 66%;
+  margin-left: auto;
+}
+.feedback .content .open-quotes {
+  margin-bottom: 11px;
+}
+.feedback .content blockquote {
+  color: #ffffff;
+  font-size: 2.6rem;
+  font-weight: 400;
+  /* line-height: 40px; */
+  line-height: 1.53; /* 153.846% */
+  text-align: left;
+  margin-left: 30px;
+}
