--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,3 +466,56 @@ a {
   line-height: 1.53; /* 153.846% */
   margin-left: 30px;
 }
+/* ===============features============= */
+.features {
+  margin-top: 135px;
+  padding: 65px 0;
+}
+.features .main-content .body {
+  display: flex;
+  justify-content: space-between;
+}
+.features .body .images {
+  display: flex;
+  gap: 30px;
+}
+.features .body .image {
+  width: 270px;
+  height: 404px;
+  border-radius: 16px;
+  object-fit: cover;
+}
+.features .body .image-left {
+  margin-top: 34px;
+}
+.features .body .image-right {
+  margin-bottom: 34px;
+}
+.features .content {
+  width: 40%;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.features .content .heading-h2 {
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -0.02em;
+}
+.features .content .desc {
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+  color: #5f5b53;
+  margin-top: 16px;
+}
+.features .content .btn-sign-up {
+  margin-top: 32px;
+  background-color: var(--primary-color);
+  width: 137px;
+  height: 50px;
+  border-radius: 26px;
+}
