--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,7 +466,7 @@ a {
   line-height: 1.53; /* 153.846% */
   margin-left: 30px;
 }
-/* ===============features============= */
+/* ===============features 1============= */
 .features {
   margin-top: 135px;
   padding: 65px 0;
@@ -493,7 +493,7 @@ a {
 }
 .features .content {
   width: 40%;
-  margin-left: auto;
+  /* margin-left: auto; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -512,10 +512,26 @@ a {
   color: #5f5b53;
   margin-top: 16px;
 }
-.features .content .btn-sign-up {
+.features .content .btn {
   margin-top: 32px;
   background-color: var(--primary-color);
   width: 137px;
   height: 50px;
   border-radius: 26px;
+}
+/* ===============features 2============= */
+.features-2nd {
+  margin-top: 70px;
+}
+.features-2nd .body {
+  /* đổi hướng phần từ trong body */
+  flex-direction: row-reverse;
+}
+.features-2nd .body .content {
+  width: 49%;
+}
+.features-2nd .images .image {
+  width: 470px;
+  height: 440px;
+  border-radius: 20px;
 }
