--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,3 +535,128 @@ a {
   height: 440px;
   border-radius: 20px;
 }
+/* =========================blog==================== */
+.blogs {
+  margin-top: 135px;
+  padding: 96px 0;
+  background-color: #fffcf4;
+}
+.blogs .blog-top {
+  text-align: center;
+}
+.blogs .blog-top .heading-h2 {
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -0.02em;
+}
+.blogs .blog-top .desc {
+  width: 448px;
+  margin: 16px auto 0;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 28px;
+  color: #696262;
+}
+.blogs .blog-list {
+  margin-top: 55px;
+  display: flex;
+  gap: 30px;
+}
+.blogs .blog-item {
+  width: 33.33%;
+  /* flex: 1; */
+  border-radius: 16px;
+  background-color: #ffffff;
+  border: 1px solid transparent;
+}
+.blogs .blog-item:hover {
+  border-radius: 16px;
+  background-color: #fff;
+  box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+  border: 1px solid transparent;
+}
+.blogs .blog-item .image {
+  width: 100%;
+  height: 250px;
+  border-radius: 16px 16px 0px 0px;
+  object-fit: cover;
+}
+.blogs .blog-item .info {
+  padding: 20px 20px 28px;
+}
+/* .blogs .dot {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: var(--primary-color);
+} */
+.blogs .blog-item .desc {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  padding-bottom: 12px;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 26px;
+  color: #5f5b53;
+}
+.blogs .blog-item .desc::before {
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: var(--primary-color);
+  margin-right: 4px;
+}
+.blogs .blog-item .desc::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  display: inline-block;
+  right: -27px;
+  height: 1px;
+  border-radius: 0.5px;
+  background-color: #e2dfda;
+}
+/* .blogs .blog-item hr {
+  margin-top: 20px;
+  width: 43%;
+  background-color: #e2dfda;
+  margin-right: auto;
+} */
+.blogs .blog-item .title {
+  margin-top: 23px;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 28px;
+  color: #171100;
+}
+.blogs .blog-item .btn-read-more {
+  margin: 12px 0;
+  width: 118px;
+  height: 50px;
+  border-radius: 25px;
+}
+.blogs .blog-item .btn-read-more:hover {
+  background-color: var(--primary-color);
+}
+.blogs .dots {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+}
+.blogs .dots .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #5f5b53;
+}
+.blogs .dot.active {
+  background-color: var(--primary-color);
+}
